--- a/index.html
+++ b/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv=“Pragma” content=”no-cache”>
-    <meta http-equiv=“Expires” content=”-1″>
-    <meta http-equiv=“CACHE-CONTROL” content=”NO-CACHE”>
-    <!-- <meta http-equiv="refresh" content="2"> -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Belajar WebGL</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Belajar WebGL</title>
 </head>
 <body>
-    <canvas id ="glcanvas" width="640" height="480">
-        Beowser anda tidak mendukung html5 <code>&lt,canvas&gt;</code>.
-    </canvas>
+  <div style="float: left;">
+  <h1>Animasi Nama</h1>
+  <h2>M. Rafi Fadhilah 05111740000075</h2>
+  <p>Dibuat dan di tes di Google Chrome. Mungkin tidak bekerja semestinya pada browser lain</p>
+  <ul>
+    <li>Untuk memutar seluruh bidang pada sumbu x, y, atau z tekan x y atau z</li>
+    <li>Untuk mempercepat putaran tekan +, dan - untuk memperlambat</li>
+    <li>Tekan panah atas untuk zoom dan panah bawah untuk unzoom</li>
+  </ul>
+  </div>
+  <canvas id="glcanvas" width="1000" height="1000" style="float: right;">
+    Browser Anda tidak mendukung HTML5 <code>&lt;canvas&gt;</code>.
+  </canvas>
+  <script name="shader" data-src="vertex.glsl" data-type="vertex" data-version="v1"></script>
+  <script name="shader" data-src="fragment.glsl" data-type="fragment" data-version="v1"></script>
+  <script type="text/javascript" src="libs/signals.js"></script>
+  <script type="text/javascript" src="libs/glUtils.js"></script>
+  <script type="text/javascript" src="libs/gl-matrix-min.js"></script>
+  <script type="text/javascript" src="index.js"></script>  
 </body>
-<script name="shader" data-src="vertex.glsl" data-type="vertex" data-version="v1" type="x-shader"></script>
-
-<script name="shader" data-src="fragment.glsl" data-type="fragment" data-version="v1" type="x-shader"></script>
-
-<script src="libs/signals.js"></script>
-<script src="libs/glUtils.js"></script>
-<script src="index.js"></script>
 </html>
